trying to see if fonts will work in this sitch

--- a/css/sass/icons.scss
+++ b/css/sass/icons.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'riversideicons';
-	src:url('../fonts/riversideicons.eot');
-	src:url('../fonts/riversideicons.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/riversideicons.ttf') format('truetype'),
-		url('../fonts/riversideicons.woff') format('woff'),
-		url('../fonts/riversideicons.svg#riversideicons') format('svg');
+	src:url('./fonts/riversideicons.eot');
+	src:url('./fonts/riversideicons.eot?#iefix') format('embedded-opentype'),
+		url('./fonts/riversideicons.ttf') format('truetype'),
+		url('./fonts/riversideicons.woff') format('woff'),
+		url('./fonts/riversideicons.svg#riversideicons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
