more pathing stuff

--- a/css/sass/pages/landing.scss
+++ b/css/sass/pages/landing.scss
@@ -1,5 +1,5 @@
 .hero{
-	background : url('/img/hero.jpg');
+	background : url('../img/hero.jpg');
 	background-position: center;
 	background-size: cover;
 	margin-left: -50%;
