--- a/css/main.css
+++ b/css/main.css
@@ -1186,8 +1186,8 @@ table {
 /* Literal.Number.Integer.Long */
 @font-face {
   font-family: 'riversideicons';
-  src: url("./fonts/riversideicons.eot");
-  src: url("./fonts/riversideicons.eot?#iefix") format("embedded-opentype"), url("./fonts/riversideicons.ttf") format("truetype"), url("./fonts/riversideicons.woff") format("woff"), url("./fonts/riversideicons.svg#riversideicons") format("svg");
+  src: url("../fonts/riversideicons.eot");
+  src: url("../fonts/riversideicons.eot?#iefix") format("embedded-opentype"), url("../fonts/riversideicons.ttf") format("truetype"), url("../fonts/riversideicons.woff") format("woff"), url("../fonts/riversideicons.svg#riversideicons") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -1360,7 +1360,7 @@ body {
   font-family: 'Cabin', sans-serif; }
 
 .hero {
-  background: url("/img/hero.jpg");
+  background: url("../img/hero.jpg");
   background-position: center;
   background-size: cover;
   margin-left: -50%;
