some better styles for menus

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,20 +15,20 @@
         <div class="site">
           <header role="main" class="clearfix">
             
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a href="#" class="icon-list"></a>
+            <h1 class="title"><a href="./index.html">{{ site.name }}</a></h1>
+            <a href="#" class="icon-list" tabindex="1"></a>
             <div id="site-menu" class="menu menu-open menu-horizontal">
               <ul>
                 <li>
-                  <a href="/events.html">Events</a>
+                  <a href="./events.html">Events</a>
                 </li>
                 <li>
-                  <a href="/members.html">Members</a>
+                  <a href="./members.html">Members</a>
                 </li>
               </ul>
             </div>
 
-            <a href="/signup.html" class="button alert signup-button">Signup</a>
+            <a href="./signup.html" class="button alert signup-button">Signup</a>
             
           </header>
           {{ content }}
