adding in social links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         <div class="site">
           {% include header.html %}
           {{ content }}
-          <footer role="main"></footer>
+          {% include footer.html %}
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="./js/main.js"></script>
