--- a/css/sass/typography.scss
+++ b/css/sass/typography.scss
@@ -9,9 +9,18 @@ a {
 p {
 	font-weight: 700;
 	line-height: 1.5em;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 p, li, strong, em, label {
 	font-size : 20px;
 	color: $darkGrey;
+}
+
+small {
+	font-size: 14px;
+	color: $darkGrey;
+	margin-top: -15px;
+	display: block;
 }
