--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,6 @@
           {{ content }}
           {% include footer.html %}
         </div>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="./js/main.js"></script>
+        <script data-main="./js/main.js" src="./js/require.min.js"></script>
     </body>
 </html>
