--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -13,6 +13,7 @@ $maxWidth : 815px;
 @import "buttons";
 @import "typography";
 @import "header";
+@import "footer";
 @import "forms";
 @import "avatar";
 
@@ -29,3 +30,4 @@ body{
 // pages
 @import "pages/landing";
 @import "pages/members";
+@import "pages/events";
