pointing towards the new signup form

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,6 @@
     </ul>
   </div>
 
-  <a href="./signup.html" class="button alert signup-button">Signup</a>
+  <a href="https://riversideio-access.herokuapp.com" class="button alert signup-button">Signup</a>
   
 </header>
