--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,9 @@
       <li>
         <a href="./members.html">Members</a>
       </li>
+      <li>
+        <a target="_blank" href="http://us5.campaign-archive2.com/home/?u=0b634d613f02dd256ad0d7317&id=27ea75d96b">News</a>
+      </li>
     </ul>
   </div>
 
