--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,9 @@
   <div id="site-menu" class="menu menu-open menu-horizontal">
     <ul>
       <li>
+        <a href="./faq.html">Learn More</a>
+      </li>
+      <li>
         <a href="https://github.com/riversideio" class="icon-github"></a>
       </li>
       <li>
