adding in last-checkin experiment

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header role="main" class="clearfix"> 
   <h1 class="title"><a href="./index.html">{{ site.name }}</a></h1>
+  <p class="last-checkin"></p>
   <a href="#" class="icon-list" tabindex="1"></a>
   <div id="site-menu" class="menu menu-open menu-horizontal">
     <ul>
