--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,8 @@
 <header role="main" class="clearfix"> 
-  <h1 class="title"><a href="./index.html">{{ site.name }}</a></h1>
+  <img src="./img/logo.png" width="44px" height="44px" alt="riversideio"/>
+  <h1 class="title">
+    <a href="./index.html">{{ site.name }}</a>
+  </h1>
   <p class="last-checkin"></p>
   <a href="#" class="icon-list" tabindex="1"></a>
   <div id="site-menu" class="menu menu-open menu-horizontal">
