--- a/css/sass/header.scss
+++ b/css/sass/header.scss
@@ -2,6 +2,11 @@ header[role="main"]{
 	max-height: 60px;
 	padding: 20px;
 	// header
+  img {
+    float: left;
+    margin-top: 3px;
+    margin-right: 10px;
+  }
 	h1{
 		float: left;
 		margin: .27em 0;
